get rid of whitespace: nowrap and max height attribute to fix positioning

--- a/allRecipes.css
+++ b/allRecipes.css
@@ -19,9 +19,7 @@ p, li a{
 #recipeSlideshowContainer{
 	margin: auto;
 	max-width: 700px;
-	max-height: 500px;
 	position: relative;
-	white-space: nowrap;
 }
 
 .recipeSlides{
